# promptbreeder-plus

./: .gitignore  README.md  evolution.py  heuristic_classifier.py  logger.py  logiqa.py  main.py  openai_utils.py  pyproject.toml  requirements.txt  scoring_cache.db  server.py  task.py  test.py
config/: mmlu.yaml  test.yaml
data/dev/: 259a4eab-17a8-4e77-8e0b-85c10cfb871d_logiqa.csv  3e64c294-23c3-412c-ad3a-59410d5ba03b_gsm8k.csv  gsm8k.csv  logiqa.csv  mmlu.csv  theoremqa.csv  truthfulqa.csv
data/test/: gsm8k.csv  logiqa.csv  theoremqa.csv  truthfulqa.csv
data/train/: 2c0dee9c-26a7-4157-982c-c5d2caa26b7b_gsm8k.csv  f7a239f2-0f89-463d-ae67-73e7e7294829_logiqa.csv  gsm8k.csv  theoremqa.csv  truthfulqa.csv
embeddings/: onnx_backend.py
src/promptbreeder/: evolution.py  logger.py  main.py  openai_utils.py  prompts.py  scoring_model.py  task.py  utils.py
src/promptbreeder/embeddings/: embedding_base.py  mlx_backend.py  onnx_backend.py
static/: main.css
templates/: base.html  index.html
