[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "promptbreeder"
version="0.0.1"
authors = [
    {name = "Benjamin Anderson", email = "ben@trytaylor.ai"},
]
description = "Automatically evolve prompts for large language models."
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = {text = ""}
classifiers = []
dependencies = [
    "fire",
    "aiohttp",
    "tiktoken==0.5.1",
    "tqdm",
    "xxhash",
    "onnxruntime",
    "transformers",
    "huggingface_hub",
    "numpy",
    "pandas",
    "python-dotenv",
    "rich",
    "pytailwindcss",
    "jinja2",
    "fastapi",
    "uvicorn",
    "matplotlib",
    "scikit-learn==1.3.2",
    "pyyaml",
    "requests",
    "python-multipart"
]